Fix nav alignment and highlight

--- a/web/src/assets/css/styles.css
+++ b/web/src/assets/css/styles.css
@@ -78,12 +78,13 @@ header.stuck .icons svg {
   
 }
 
-.nav-item:hover > div > a,
-.nav-item:focus-within > div > a {
+.nav-item:hover > a,
+.nav-item:focus-within > a {
   @apply bg-df-black text-df-tan-darkest z-40;
 }
 
 .nav-item:hover > .subnav,
+.nav-item > a:hover + .subnav,
 .nav-item:focus-within > .subnav {
   @apply grid sm:flex;
 }
